<resources>
    <string name="app_name">Red_social</string>
    <string name="RegistrarBTN">Registrarme</string>
    <string name="LoginBTN">Login</string>
    <string name="RegistroTXT">REGISTRO</string>
    <string name="Correo">Escriba Correo</string>
    <string name="Contrasenia">Escriba Contraseña</string>
    <string name="Nombres">Nombres Completos</string>
    <string name="Apellidos">Apellidos Completos</string>
    <string name="Edad">Edad</string>
    <string name="Telefono">Teléfono</string>
    <string name="Direccion">Direccion</string>
    <string name="REGISTRARUSUARIO">REGISTRARME</string>
    <string name="CorreoLogin">Correo electrónico</string>
    <string name="ContraseniaLogin">Contraseña</string>
    <string name="INGRESAR">LOGIN</string>
    <string name="Noinicio">No pudo iniciar sesión, intente nuevamente</string>
    <string name="ok_no_inicio">ENTENDIDO</string>
    <string name="INGRESARGOOGLE">INGRESAR CON GOOGLE</string>

    <string name="uidtxt">Uid:</string>
    <string name="uidPerfil">---</string>
    <string name="correotxt">Correo:</string>
    <string name="correoPerfil">---</string>
    <string name="nombrestxt">Nombres:</string>
    <string name="nombresPerfil">---</string>

    <string name="MisDatosOpcion">Mis Datos</string>
    <string name="CrearPublicacionOpcion">Crear Post</string>
    <string name="PublicacionesOpcion">Publicaciones</string>
    <string name="UusarioOpcion">Usuarios</string>
    <string name="ChatsOpcion">Chats</string>

    <string name="MisDatosTXT">Mis Datos Personales</string>
    <string name="UidDatoTXT">UID: </string>
    <string name="UidDato">--</string>
    <string name="NombresDatoTXT">NOMBRES: </string>
    <string name="NombresDato">--</string>
    <string name="ApellidosDatoTXT">APELLIDOS: </string>
    <string name="ApellidosDato">--</string>
    <string name="CorreoDatoTXT">CORREO: </string>
    <string name="CorreoDato">--</string>
    <string name="ContraseniaDatoTXT">CONTRASEÑA: </string>
    <string name="ContraseniaDato">--</string>
    <string name="EdadDatoTXT">EDAD: </string>
    <string name="EdadDato">--</string>
    <string name="DireccionDatoTXT">DIRECCION: </string>
    <string name="DireccionDato">--</string>
    <string name="TelefonoDatoTXT">TELEFONO: </string>
    <string name="TelefonoDato">--</string>
    <string name="Actualizar">Actualizar Dato</string>
    <string name="ActualizarContrasenia">Actualizar Contraseña</string>
    <string name="CerrarSesion">Cerrar sesión</string>

    <string name="fecha">--</string>

    <string name="MisCredencialesTXT">Mis Credenciales</string>
    <string name="CorreoActualTXT">Correo Actual: </string>
    <string name="CorreoActual">--</string>
    <string name="ContraseniaActualTXT">Contraseña Actual: </string>
    <string name="ContraseniaActual">--</string>
    <string name="ActualContraseniaET">Contraseñia Actual</string>
    <string name="NuevaContraseniaET">Nueva contraseña</string>
    <string name="CAMBIARCONTRASENIABTN">CAMBIAR CONTRASEÑA</string>
    <string name="NotaTXT">Nota: Si cambia de contraseña, se procede a cerrar sesión automáticamente</string>
</resources>