<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Opciones.Mis_Datos">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/MisDatosTXT"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/baseline_supervised_user_circle_24"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/UidDatoTXT"
                android:text="@string/UidDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/UidDato"
                android:text="@string/UidDato"
                android:textSize="18sp"
                android:layout_marginStart="5dp"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/NombresDatoXT"
                android:text="@string/NombresDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/NombresDato"
                android:text="@string/NombresDato"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ApellidosDatoTXT"
                android:text="@string/ApellidosDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/ApellidosDato"
                android:text="@string/ApellidosDato"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CorreoDatoTXT"
                android:text="@string/CorreoDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/CorreoDato"
                android:text="@string/CorreoDato"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ContraseniaDatoTXT"
                android:text="@string/ContraseniaDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/ContraseniaDato"
                android:text="@string/ContraseniaDato"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EdadDatoTXT"
                android:text="@string/EdadDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/EdadDato"
                android:text="@string/EdadDato"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DireccionDatoTXT"
                android:text="@string/DireccionDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/DireccionDato"
                android:text="@string/DireccionDato"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TelefonoDatoTXT"
                android:text="@string/TelefonoDatoTXT"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/TelefonoDato"
                android:text="@string/TelefonoDato"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/Actualizar"
            android:text="@string/Actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/baseline_android_24"
            android:layout_gravity="center"
            android:drawablePadding="15dp"
            android:padding="15dp"/>

        <Button
            android:id="@+id/ActualizarContrasenia"
            android:layout_marginTop="5dp"
            android:text="@string/ActualizarContrasenia"
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/baseline_lock_24"
            android:layout_gravity="center"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>