<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/baseline_person_24"
            android:layout_marginTop="10dp"/>

        <!--Correo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/CorreoLogin"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                android:textColorHint="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user_icon"
                android:drawablePadding="5dp"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--Fin Correo-->

        <!--Contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/ContraseniaLogin"
                android:hint="@string/ContraseniaLogin"
                android:textColorHint="#fff"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock_icon"
                android:drawablePadding="5dp"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--Fin Correo-->

        <!--Botón-->
        <Button
            android:id="@+id/INGRESAR"
            android:text="@string/INGRESAR"
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/INGRESARGOOGLE"
            android:text="@string/INGRESARGOOGLE"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/logo_google"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>